--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
     </head>
     <body>
-      <canvas id="canvas" width="600" height="400">
-      </canvas>
+      <canvas id="myCanvas" width="450" height="300"></canvas>
+      <div id="button-container">
+        <button id="start">Start</button>
+        <button id="end">End</button>
+      </div>
     </body>
   </html>
