Link main.css and canvas.js to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
     <body>
       <canvas id="myCanvas" width="450" height="300"></canvas>
@@ -8,5 +9,6 @@
         <button id="start">Start</button>
         <button id="end">End</button>
       </div>
+      <script src="scripts/canvas.js"></script>
     </body>
   </html>
