--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
     <body>
       <canvas id="myCanvas" width="450" height="300"></canvas>
