--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     </head>
     <body>
       <canvas id="myCanvas" width="450" height="300"></canvas>
+      <canvas id="myCanvas" width="450" height="300"></canvas>
       <div id="container">
         <div class="box" id="instructions">
           <h1 class="title">INSTRUCTIONS</h1>
-          <p id="instruction-text">Welcome to Space Shooter! Your objective is to survive as long as you can by blasting the enemy out of the sky. But be careful, the longer you survive, the harder it becomes.</p>
+          <p id="instruction-text">Welcome to Space Shooter! Your objective is to survive as long as you can by blasting the enemy out of the sky. But be careful, the longer you survive, the harder it becomes. <strong>NOTE: Reading the recent update is recommended! This will inform you of currently-known gameplay-affecting bugs!</strong></p>
           <div id="control-container">
             <h2 id="control-title">Controls</h2>
             <p class="control"><strong>Move Up:</strong> W or Up Arrow Key<p>
@@ -19,6 +20,15 @@
         </div>
         <div class="box" id="updateNotes">
           <h1 class="title">RECENT UPDATE</h1>
+          <ul class="update-list"><strong>Main Changes:</strong>
+            <li class="update-item">Score system has been implemented! Destroying a ship awards you 50 points</li>
+            <li class="update-item">Levels 1-5 have been created. Each level will allow enemies to travel faster, but their speeds have been randomized</li>
+            <li class="update-item">Upon your inevitable death, a screen now appears showing what level you reached and your final score</li>
+          </ul>
+          <ul class="update-list"><strong>Known Bugs:</strong>
+            <li class="update-item">Shooting stops movement (any key will do this)</li>
+            <li class="update-item">At high speeds, shots sometimes go through enemy</li>
+          </ul>
         </div>
       </div>
       <div id="button-container">
