--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
         <button id="end">End</button>
       </div>
       <script src="scripts/canvas.js"></script>
+      <script src="scripts/levels.js"></script>
     </body>
   </html>
