--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
             <p class="control"><strong>Move Up:</strong> W or Up Arrow Key<p>
             <p class="control"><strong>Move Down:</strong> S or Down Arrow Key</p>
             <p class="control"><strong>Fire:</strong> Spacebar</p>
+            <p class="control"><strong>Pause:</stong> P</p>
           </div>
         </div>
         <div class="box" id="updateNotes">
-          <h1 class="title">RECENT UPDATE</h1>
+          <h1 class="title">v1.0 Release Notes</h1>
           <ul class="update-list"><strong>Main Changes:</strong>
-            <li class="update-item">Score system has been implemented! Destroying a ship awards you 50 points</li>
-            <li class="update-item">Levels 1-5 have been created. Each level will allow enemies to travel faster, but their speeds have been randomized</li>
-            <li class="update-item">Upon your inevitable death, a screen now appears showing what level you reached and your final score</li>
+            <li class="update-item">Levels 6-10 have been created. Enemies in these levels will spawn significantly quicker than 1-5, but their speed is slightly slower</li>
+            <li class="update-item">You can now pause the game by pressing P</li>
           </ul>
-          <ul class="update-list"><strong>Known Bugs:</strong>
-            <li class="update-item">Shooting stops movement (any key will do this)</li>
-            <li class="update-item">At high speeds, shots sometimes go through enemy</li>
+          <ul class="update-list"><strong>Bug Fixes:</strong>
+            <li class="update-item">No longer able to rapidly fire by holding down spacebar</li>
+            <li class="update-item">Pressing another button while moving will no longer stop your movement. This includes how firing while moving stopped your player</li>
+            <li class="update-item">Your shots will no longer go through the enemy</li>
           </ul>
         </div>
       </div>
