--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="control"><strong>Move Up:</strong> W or Up Arrow Key<p>
             <p class="control"><strong>Move Down:</strong> S or Down Arrow Key</p>
             <p class="control"><strong>Fire:</strong> Spacebar</p>
-            <p class="control"><strong>Pause:</stong> P</p>
+            <p class="control"><strong>Pause:</strong> P</p>
           </div>
         </div>
         <div class="box" id="updateNotes">
