Update patch notes

--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
           </div>
         </div>
         <div class="box" id="updateNotes">
-          <h1 class="title">v1.0 Release Notes</h1>
+          <h1 class="title">v1.0.1 Patch</h1>
           <ul class="update-list"><strong>Main Changes:</strong>
-            <li class="update-item">Levels 6-10 have been created. Enemies in these levels will spawn significantly quicker than 1-5, but their speed is slightly slower</li>
-            <li class="update-item">You can now pause the game by pressing P</li>
-          </ul>
-          <ul class="update-list"><strong>Bug Fixes:</strong>
-            <li class="update-item">No longer able to rapidly fire by holding down spacebar</li>
-            <li class="update-item">Pressing another button while moving will no longer stop your movement. This includes how firing while moving stopped your player</li>
-            <li class="update-item">Your shots will no longer go through the enemy</li>
+            <li class="update-item">Level difficulty has been drastically changed. The previous version was nearly impossible to get through without cheesing mechanics or getting very lucky/li>
           </ul>
         </div>
       </div>
