Add link to patch-notes.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <div class="box" id="updateNotes">
           <h1 class="title">v1.0.1 Patch</h1>
+          <a id="full-release-notes href="patch-notes.html">All Notes Here</a>
           <ul class="update-list"><strong>Main Changes:</strong>
             <li class="update-item">Level difficulty has been drastically changed. The previous version was nearly impossible to get through without cheesing mechanics or getting very lucky/li>
           </ul>
