--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="box" id="updateNotes">
           <h1 class="title">v1.0.1 Patch</h1>
-          <a id="full-release-notes href="patch-notes.html">All Notes Here</a>
+          <a id="full-release-notes" href="patch-notes.html" target="_blank">All Notes Here</a>
           <ul class="update-list"><strong>Main Changes:</strong>
             <li class="update-item">Level difficulty has been drastically changed. The previous version was nearly impossible to get through without cheesing mechanics or getting very lucky/li>
           </ul>
@@ -32,5 +32,6 @@
       </div>
       <script src="scripts/canvas.js"></script>
       <script src="scripts/levels.js"></script>
+      <script src="sripts/powers.js"></script>
     </body>
   </html>
