Add 1.1 update notes

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
           </div>
         </div>
         <div class="box" id="updateNotes">
-          <h1 class="title">v1.0.1 Patch</h1>
+          <h1 class="title">v1.1 - Power-ups!</h1>
           <a id="full-release-notes" href="patch-notes.html" target="_blank">All Notes Here</a>
           <ul class="update-list"><strong>Main Changes:</strong>
-            <li class="update-item">Level difficulty has been drastically changed. The previous version was nearly impossible to get through without cheesing mechanics or getting very lucky/li>
+            <li class="update-item">High scores have been added! New high scores are automatically submitted and will show on your screen</li>
+            <li class="update-item">Three new power-ups have been added - Rapid Fire, Player Speed Boost, and Bigger Enemies. You get a new one every 5 levels</li>
+            <li class="update-item">Base fire rate has been limited to 3 shots/second (can be increased with rapid fire power)</li>
+            <li class="update-item">New Enemy Type: Attack - this enemy will shoot back at you!</li>
+            <li class="update-item">Levels 11-15 have been added. These new levels will be able to spawn Attack enemies</li>
+            <li class="update-item">Patch Note History page has been created. Use the link above to see the full history of game updates</li>
           </ul>
         </div>
       </div>
