--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       </div>
       <script src="scripts/canvas.js"></script>
       <script src="scripts/levels.js"></script>
-      <script src="sripts/powers.js"></script>
+      <script src="scripts/powers.js"></script>
     </body>
   </html>
