--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <meta name="viewport" width="device-width" initial-scale="1.0">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
